--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,25 @@
 asgiref==3.8.1
+certifi==2024.12.14
+charset-normalizer==3.4.1
+cloudinary==1.41.0
+defusedxml==0.7.1
 Django==5.1.4
 djangorestframework==3.15.2
+httpie==3.2.4
+idna==3.10
+markdown-it-py==3.0.0
+mdurl==0.1.2
+multidict==6.1.0
+pillow==11.1.0
+psycopg==3.2.3
 Pygments==2.18.0
+PySocks==1.7.1
+python-dotenv==1.0.1
+requests==2.32.3
+requests-toolbelt==1.0.0
+rich==13.9.4
+setuptools==75.6.0
+six==1.17.0
 sqlparse==0.5.3
+typing_extensions==4.12.2
+urllib3==2.3.0
