--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ charset-normalizer==3.4.1
 cloudinary==1.41.0
 defusedxml==0.7.1
 Django==5.1.4
+django-cloudinary-storage==0.3.0
+django-cors-headers==4.6.0
 djangorestframework==3.15.2
 httpie==3.2.4
 idna==3.10
