--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
+    "client": "file:",
     "clsx": "^2.1.1",
     "lucide-react": "^0.471.0",
     "next": "15.1.3",
