--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.1",
     "client": "file:",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.5.0",
     "lucide-react": "^0.471.0",
     "next": "15.1.3",
     "react": "^19.0.0",
